EPMRPP-38460. Launches page. Fix breadcrumbs overflow

--- a/app/src/components/main/breadcrumbs/breadcrumb/breadcrumb.scss
+++ b/app/src/components/main/breadcrumbs/breadcrumb/breadcrumb.scss
@@ -5,6 +5,8 @@
   padding-right: 5px;
   font-size: 12px;
   color: $COLOR--charcoal-grey;
+  word-break: break-word;
+  line-height: 18px;
 
   .list-view-icon {
     display: inline-block;
